Fix 'Cancel transaction edit dialog gives wrong options ...'

... when you click on something other than another transaction.

This commit enables the "continue" button in those cases.
If the user wants to continue the transaction edit, cancels
the event in MousePressFilter::eventFilter by returning true.

BUG:243612
FIXED-IN:4.8.2